Update styling for side of code block to avoid flickering

--- a/client/src/components/Main/Display.scss
+++ b/client/src/components/Main/Display.scss
@@ -27,6 +27,7 @@
 .line {
   width: 3px;
   height: 97.5%;
+  min-height: 35px;
   background-color: #E0D9D9;
   border-radius: 20px;
   margin-right: 10px;
